// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime drawer should open pop-up when battery icon is tapped 1`] = `
<div>
  <button
    aria-controls="menu-list-:r6:"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="date-time-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    data-active=""
    id="menu-button-:r6:"
  >
    <span
      class="css-xl71ch"
    >
      <p
        class="chakra-text css-0"
      >
        Thu May 14 11:01 AM
      </p>
    </span>
  </button>
</div>
`;

exports[`DateTime drawer should render correctly 1`] = `
<div>
  <button
    aria-controls="menu-list-:r2:"
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="date-time-top-bar-button"
    class="chakra-menu__menu-button css-10l0d22"
    id="menu-button-:r2:"
  >
    <span
      class="css-xl71ch"
    >
      <p
        class="chakra-text css-0"
      >
        Thu May 14 11:01 AM
      </p>
    </span>
  </button>
</div>
`;
